// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with background dark 1`] = `
.c0 {
  background: #fff;
  color: #0a1128;
  background: #0a1128;
  color: #fff;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
}

<div>
  <div
    class="c0"
    id="id-6047-455303598676"
  >
    SectionBackground
  </div>
</div>
`;

exports[`<SectionBackground /> should render with background light 1`] = `
.c0 {
  background: #fff;
  color: #0a1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
}

<div>
  <div
    class="c0"
    id="id-8007-724126218434"
  >
    SectionBackground
  </div>
</div>
`;
